--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <link href="//fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600&amp;display=swap" rel="stylesheet">
     <link href="//fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&amp;display=swap" rel="stylesheet">
     <!-- /font -->
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/3770/3770495.png"/>
     <link rel="stylesheet" href="/style.css">
-    <title>dieu bat ngo minh muon gui toi cau</title>
+    <title>điều bất ngờ mình muốn gửi tới cậu</title>
 </head>
 
 <body>
